# serverless-template

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  serverless.yml
src/v1/api/handlers/: app.py
src/v1/api/middlewares/: common.py
src/v1/api/routes/: user.py
src/v1/config/: settings.py
src/v1/views/: console.py
